unpackaged/main/default/objects/GI_General_Insurance_Request__c/GI_General_Insurance_Request__c.object-meta.xml
<CustomObject>
    <label>General Insurance Request</label>
    <nameField>
        <displayFormat>GIR-{00000}</displayFormat>
        <label>Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Insurance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>