unpackaged/main/default/objects/GI_General_Insurance_Request__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>GI_General_Insurance_Policy__c</referenceTo>
    <relationshipLabel>General Insurance Requests</relationshipLabel>
    <relationshipName>General_Insurance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>