unpackaged/main/default/objects/GI_General_Insurance_Request__c/listViews/Pending_with_Admin.listView-meta.xml
<ListView>
    <fullName>Pending_with_Admin</fullName>
    <columns>NAME</columns>
    <columns>Insurance_Policy__c</columns>
    <columns>Policy_Type__c</columns>
    <columns>Request_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Insurance Admin Pending</value>
    </filters>
    <label>Pending with Admin</label>
</ListView>